# zerobrew

./: CHANGELOG.md  Cargo.toml
.github/workflows/: release.yml
zb_cli/src/: cli.rs
zb_cli/src/commands/: mod.rs  upgrade.rs
zb_core/src/formula/: bottle.rs  resolve.rs  types.rs
zb_io/src/extraction/patch/: linux.rs
zb_io/src/installer/install/: plan.rs
zb_io/src/network/download/: chunked.rs
