[workspace]
members = ["zb_core", "zb_io", "zb_cli"]
resolver = "3"

[workspace.package]
version = "0.3.2"
rust-version = "1.95"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
console = "0.16.2"
indicatif = "0.18.3"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "stream", "rustls", "http2"] }
# Pinned to 0.23.x: newer reqwest pulls rustls 0.24-dev, which lacks the aws-lc-rs feature.
rustls = { version = ">=0.23.26, <0.24", features = ["aws-lc-rs"] }
rustls-native-certs = "0.8.3"
webpki-roots = "1.0.7"
flate2 = "1.1.8"
tar = "0.4.44"
xz2 = "0.1.7"
zstd = "0.13.3"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
rusqlite = { version = "0.40.0", features = ["bundled"] }
futures = "0.3.31"
futures-util = "0.3.31"
rayon = "1.11.0"
regex = "1.12.2"
sha2 = "0.11.0"
walkdir = "2.5.0"
fs4 = "1.1.0"
libc = "0.2.180"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
strsim = "0.11.1"

# Dev dependencies
tempfile = "3"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
